--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 altair==5.5.0
 annotated-types==0.7.0
+asttokens==3.0.0
 attrs==25.3.0
 blinker==1.9.0
 blis==1.3.0
@@ -10,31 +11,53 @@ charset-normalizer==3.4.1
 click==8.1.8
 cloudpathlib==0.21.0
 colorama==0.4.6
+comm==0.2.2
 confection==0.1.5
 cymem==2.0.11
+debugpy==1.8.14
+decorator==5.2.1
+executing==2.2.0
+filelock==3.18.0
+fsspec==2025.5.1
 gitdb==4.0.12
 GitPython==3.1.44
+huggingface-hub==0.32.5
 idna==3.10
+ipykernel==6.29.5
+ipython==9.3.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
 Jinja2==3.1.6
 joblib==1.4.2
 jsonschema==4.23.0
 jsonschema-specifications==2025.4.1
+jupyter_client==8.6.3
+jupyter_core==5.8.1
 langcodes==3.5.0
 language_data==1.3.0
 marisa-trie==1.2.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+matplotlib-inline==0.1.7
 mdurl==0.1.2
+mpmath==1.3.0
 murmurhash==1.0.12
 narwhals==1.36.0
+nest-asyncio==1.6.0
+networkx==3.5
 nltk==3.9.1
 numpy==2.2.5
 packaging==24.2
 pandas==2.2.3
+parso==0.8.4
 pillow==11.2.1
+platformdirs==4.3.8
 preshed==3.0.9
+prompt_toolkit==3.0.51
 protobuf==5.29.4
+psutil==7.0.0
 pt_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-3.8.0/pt_core_news_sm-3.8.0-py3-none-any.whl#sha256=c304fa04db3af73cd08a250feacf560506e15a2ec2469bd1b09f06847f6b455c
+pure_eval==0.2.3
 pyarrow==19.0.1
 pydantic==2.11.3
 pydantic_core==2.33.1
@@ -43,11 +66,15 @@ Pygments==2.19.1
 pyphen==0.17.2
 python-dateutil==2.9.0.post0
 pytz==2025.2
+pywin32==310
+PyYAML==6.0.2
+pyzmq==26.4.0
 referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
 rich==14.0.0
 rpds-py==0.24.0
+safetensors==0.5.3
 scikit-learn==1.6.1
 scipy==1.15.2
 setuptools==79.0.0
@@ -59,13 +86,19 @@ spacy==3.8.5
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 srsly==2.5.1
+stack-data==0.6.3
 streamlit==1.44.1
+sympy==1.14.0
 tenacity==9.1.2
 thinc==8.3.6
 threadpoolctl==3.6.0
+tokenizers==0.21.1
 toml==0.10.2
+torch==2.7.1
 tornado==6.4.2
 tqdm==4.67.1
+traitlets==5.14.3
+transformers==4.52.4
 typer==0.15.2
 typing-inspection==0.4.0
 typing_extensions==4.13.2
@@ -73,5 +106,7 @@ tzdata==2025.2
 urllib3==2.4.0
 wasabi==1.1.3
 watchdog==6.0.0
+wcwidth==0.2.13
 weasel==0.4.1
 wrapt==1.17.2
+xgboost==3.0.2
